# ScriptKidAgent

./: .gitignore  Dockerfile  README.md  packages.list  pyproject.toml  scratch.ipynb  service_reports.txt  vuln_reports.txt
.devcontainer/: devcontainer.json
OpenHands/openhands/agenthub/: __init__.py
OpenHands/openhands/controller/: agent.py
agentlib/: setup.py
agentlib/agentlib/lib/: web_console.py
agentlib/agentlib/lib/agents/: agent.py  (+1 more)
agentlib/examples/bash_agent/: main.py
agentlib/examples/one_off_llm_call/: main.py
evaluation/: RESULTS.md
evaluation/CVE-2016-4437/: exp_reports.txt  log.txt  service_reports.txt  vuln_reports.txt
evaluation/CVE-2017-7494/: log.txt  result.txt  service_reports.txt  vuln_reports.txt
evaluation/CVE-2018-20062/: exp_reports.txt  log.txt  result.txt  service_reports.txt  vuln_reports.txt
evaluation/CVE-2020-11800/: exp_reports.txt  log.txt  service_reports.txt  vuln_reports.txt
evaluation/CVE-2021-22205/: exp_reports.txt  log.txt  result.txt  service_reports.txt  vuln_reports.txt
evaluation/CVE-2021-3129/: exp_reports.txt  log.txt  result.txt  service_reports.txt  vuln_reports.txt
evaluation/CVE-2022-0543/: exp_reports.txt  log.txt  service_reports.txt  vuln_reports.txt
evaluation/CVE-2022-22963/: exp_reports.txt  log.txt  service_reports.txt  vuln_reports.txt
metasploitable3-workspace/: Vagrantfile
scriptkidagent/: models.py  scriptkid.py  service_reports.txt  utils.py
scriptkidagent/tools/: schemas.py  tools.py
tests/: docker_manager.py  test_execute_in_msfconsole.py
volumes/sessions/: main.json
(+28 files in other folders)
